# zmk-driver-iqs9151

./: .gitignore  LICENSE  flake.nix
documents/: gesture_spec.md  iqs9151_kconfig_reference.md  scroll_inertia_stop_tap_suppression.md
drivers/input/: Kconfig  iqs9151.c  iqs9151_test.h
tests/iqs9151_work_cb/: CMakeLists.txt
tests/iqs9151_work_cb/src/: main.c
