cmake_minimum_required(VERSION 3.20.0)

set(CONFIG_APPLICATION_DEFINED_SYSCALL true)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(iqs9151_work_cb_test)

if(DEFINED ENV{ZMK_APP_DIR})
    set(ZMK_APP_DIR $ENV{ZMK_APP_DIR})
else()
    set(ZMK_APP_DIR ${CMAKE_CURRENT_LIST_DIR}/../../../../zmk/app)
endif()
zephyr_syscall_header(${ZMK_APP_DIR}/include/drivers/behavior.h)
zephyr_syscall_header(${ZMK_APP_DIR}/include/drivers/input_processor.h)

target_sources(app PRIVATE
    src/main.c
    ../../drivers/input/iqs9151.c
)

target_include_directories(app PRIVATE
    ../../drivers/input
)

target_compile_definitions(app PRIVATE
    CONFIG_INPUT_IQS9151_TEST=1
    CONFIG_INPUT_IQS9151_LOG_LEVEL=0
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_DECAY=985
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_RECENT_WINDOW_MS=60
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_STALE_GAP_MS=35
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_MIN_SAMPLES=1
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_MIN_AVG_SPEED=4
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_STOP_TAP_SUPPRESS_MS=250
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_DECAY=970
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_RECENT_WINDOW_MS=60
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_STALE_GAP_MS=35
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_MIN_SAMPLES=2
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_MIN_AVG_SPEED=10
    CONFIG_INPUT_IQS9151_1F_TAP_ENABLE=1
    CONFIG_INPUT_IQS9151_1F_TAP_MAX_MS=120
    CONFIG_INPUT_IQS9151_1F_TAP_MOVE=25
    CONFIG_INPUT_IQS9151_1F_PRESSHOLD_ENABLE=1
    CONFIG_INPUT_IQS9151_1F_TAPDRAG_GAP_MAX_MS=230
    CONFIG_INPUT_IQS9151_2F_TAP_ENABLE=1
    CONFIG_INPUT_IQS9151_2F_TAP_MAX_MS=130
    CONFIG_INPUT_IQS9151_2F_TAP_MOVE=30
    CONFIG_INPUT_IQS9151_2F_PRESSHOLD_ENABLE=1
    CONFIG_INPUT_IQS9151_2F_TAPDRAG_GAP_MAX_MS=200
    CONFIG_INPUT_IQS9151_2F_PINCH_ENABLE=1
    CONFIG_INPUT_IQS9151_2F_SCROLL_START_MOVE=50
    CONFIG_INPUT_IQS9151_2F_PINCH_START_DISTANCE=80
    CONFIG_INPUT_IQS9151_2F_PINCH_WHEEL_GAIN_X10=40
    CONFIG_INPUT_IQS9151_3F_TAP_ENABLE=1
    CONFIG_INPUT_IQS9151_3F_TAP_MAX_MS=180
    CONFIG_INPUT_IQS9151_3F_TAP_MOVE=30
    CONFIG_INPUT_IQS9151_3F_PRESSHOLD_ENABLE=1
    CONFIG_INPUT_IQS9151_3F_TAPDRAG_GAP_MAX_MS=230
    CONFIG_INPUT_IQS9151_3F_SWIPE_THRESHOLD=300
    CONFIG_INPUT_IQS9151_SCROLL_X_ENABLE=1
    CONFIG_INPUT_IQS9151_SCROLL_Y_ENABLE=1
    CONFIG_INPUT_IQS9151_CURSOR_INERTIA_ENABLE=1
    CONFIG_INPUT_IQS9151_SCROLL_INERTIA_ENABLE=1
    CONFIG_INPUT_IQS9151_RESOLUTION_X=2457
    CONFIG_INPUT_IQS9151_RESOLUTION_Y=3072
    CONFIG_INPUT_IQS9151_ATI_TARGETCOUNT=400
    CONFIG_INPUT_IQS9151_DYNAMIC_FILTER_BOTTOM_SPEED=20
    CONFIG_INPUT_IQS9151_DYNAMIC_FILTER_TOP_SPEED=511
    CONFIG_INPUT_IQS9151_DYNAMIC_FILTER_BOTTOM_BETA=10
    CONFIG_INPUT_IQS9151_INIT_PRIORITY=80
)
